--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Web Viewer for Claude Code history"
     />
-    <title>Claude Code Viewer</title>
+    <title>SpecForge Viewer</title>
   </head>
   <body>
     <div id="app"></div>
